fixed alignment issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1922,7 +1922,7 @@
 		input[type="reset"]:hover,
 		button:hover,
 		.button:hover {
-			background-color: #9ececc;
+			background-color: #117efa;
 		}
 
 		input[type="button"]:active,
@@ -2012,7 +2012,7 @@
 			-webkit-flex-shrink: 0;
 			-ms-flex-shrink: 0;
 			flex-shrink: 0;
-			padding: 1.5em 0 0.75em 0;
+			padding: 0.1em 0 0.2em 0;
 		}
 
 			#header .bottom > :last-child {
